--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ crossterm = "0.28.1"
 dotenvy = "0.15.7"
 image = "0.25.6"
 itertools = "0.14.0"
+mal-api = "2.0.2"
 ratatui = "0.29.0"
 ratatui-image = "5.0.0"
 serde = { version = "1.0.219", features = ["derive"] }
@@ -17,3 +18,4 @@ serde_json = "1.0.140"
 tachyonfx = "0.13.0"
 ureq = "3.0.10"
 viuer = "0.9.1"
+tokio = { version = "1", features = ["full"] }
