--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ anyhow = "1.0.97"
 color-eyre = "0.6.3"
 crossterm = "0.28.1"
 dotenvy = "0.15.7"
-image = "0.25.6"
+image = {version = "0.25.6", features = ["gif"]}
 itertools = "0.14.0"
 mal-api = "2.0.2"
 ratatui = "0.29.0"
