--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ ratatui-image = "8.0.0"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 tachyonfx = "0.13.0"
-ureq = "3.0.10"
+ureq = { version = "3.0.10", features = ["json"] }
 viuer = "0.9.1"
 tokio = { version = "1", features = ["full"] }
 rouille = "3.6.2"
