--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,13 +1,10 @@
 name: Publish Docker image
-
 on:
   push:
     branches: ['main']
-
 env:
   REGISTRY: docker.io
   IMAGE_NAME: dogfetus/mal-cli 
-
 jobs:
   push_to_registry:
     name: Push Docker image to Docker Hub
@@ -17,23 +14,28 @@ jobs:
       contents: read
       attestations: write
       id-token: write
-
     steps:
       - name: Check out the repo
         uses: actions/checkout@v4
-
+      
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-
+      
       - name: Extract metadata (tags, labels) for Docker
         id: meta
         uses: docker/metadata-action@v5
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-
+      
       - name: Build and push Docker image
         id: push
         uses: docker/build-push-action@v5
@@ -41,13 +43,15 @@ jobs:
           context: ./server
           file: ./server/Dockerfile
           push: true
+          platforms: linux/amd64,linux/arm64,linux/arm/v8
           tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
           labels: ${{ steps.meta.outputs.labels }}
-
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+      
       # - name: Generate artifact attestation
       #   uses: actions/attest-build-provenance@v2
       #   with:
       #     subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
       #     subject-digest: ${{ steps.push.outputs.digest }}
       #     push-to-registry: true
-      #
