--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -2,6 +2,8 @@ name: Publish Docker image
 on:
   push:
     branches: ['main']
+    paths:
+      - 'server/**'
 env:
   REGISTRY: docker.io
   IMAGE_NAME: dogfetus/mal-cli 
@@ -49,9 +51,9 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
       
-      # - name: Generate artifact attestation
-      #   uses: actions/attest-build-provenance@v2
-      #   with:
-      #     subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-      #     subject-digest: ${{ steps.push.outputs.digest }}
-      #     push-to-registry: true
+      - name: Generate artifact attestation
+        uses: actions/attest-build-provenance@v2
+        with:
+          subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          subject-digest: ${{ steps.push.outputs.digest }}
+          push-to-registry: true
