--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2024"
 [dependencies]
 anyhow = "1.0.97"
 color-eyre = "0.6.3"
-crossterm = "0.28.1"
+crossterm = {version = "0.28.1", features = ["serde"]}
 image = {version = "0.25.6", features = ["gif"]}
 ratatui = "0.29.0"
 ratatui-image = "8.0.0"
@@ -24,3 +24,4 @@ cached = "0.55.1"
 tui-widgets = "0.4.1"
 regex = "1.11.1"
 indexmap = "2.10.0"
+toml = "0.9.7"
