--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,13 +6,13 @@ edition = "2024"
 [dependencies]
 anyhow = "1.0.97"
 color-eyre = "0.6.3"
-crossterm = {version = "0.28.1", features = ["serde"]}
+crossterm = {version = "0.29.0", features = ["serde"]}
 image = {version = "0.25.6", features = ["gif"]}
-ratatui = "0.29.0"
+ratatui = { version = "0.29.0", features = ["serde"] }
 ratatui-image = "8.0.0"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
-tachyonfx = "0.13.0"
+# tachyonfx = "0.13.0"
 ureq = { version = "3.0.10", features = ["json"] }
 tokio = { version = "1", features = ["full"] }
 rouille = "3.6.2"
@@ -20,7 +20,7 @@ url = "2.5.4"
 open = "5.3.2"
 once_cell = "1.21.3"
 chrono = "0.4.41"
-cached = "0.55.1"
+cached = "0.56.0"
 tui-widgets = "0.4.1"
 regex = "1.11.1"
 indexmap = "2.10.0"
